@@ -2,7 +2,7 @@
 /* vim: set expandtab sw=4 ts=4 sts=4: */
 /**
  * @todo    we must handle the case if sql.php is called directly with a query
- *          what returns 0 rows - to prevent cyclic redirects or includes
+ *          that returns 0 rows - to prevent cyclic redirects or includes
  * @version $Id$
  * @package phpMyAdmin
  */
@@ -106,7 +106,8 @@ if (isset($find_real_end) && $find_real_end) {
  */
 if (isset($store_bkm)) {
     PMA_Bookmark_save($fields, (isset($bkm_all_users) && $bkm_all_users == 'true' ? true : false));
-    PMA_sendHeaderLocation($cfg['PmaAbsoluteUri'] . $goto);
+    // go back to sql.php to redisplay query; do not use &amp; in this case:
+    PMA_sendHeaderLocation($cfg['PmaAbsoluteUri'] . $goto . '&label=' . $fields['label']);
 } // end if
 
 /**
@@ -625,6 +626,12 @@ else {
     // hide edit and delete links for information_schema
     if ($db == 'information_schema') {
         $disp_mode = 'nnnn110111';
+    }
+
+    if (isset($label)) {
+        $message = PMA_message::success('strBookmarkCreated');
+        $message->addParam($label);
+        $message->display();
     }
 
     PMA_displayTable($result, $disp_mode, $analyzed_sql);
